# silver_shark

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: main.cpp
src/engine/: data.cpp  data.hpp  id_table.hpp  item.hpp  machine.hpp  recipe.hpp  string_id_table.cpp  string_id_table.hpp
src/engine/graph/: edge.hpp  graph.cpp  graph.hpp  node.hpp  nodes.hpp
src/error/: error.hpp
src/ui/: float_input_widget.cpp  float_input_widget.hpp  graph_view.cpp  graph_view.hpp  main_window.cpp  main_window.hpp
src/ui/graph/: machine_node_item.cpp  machine_node_item.hpp  port_direction.hpp  port_item.cpp  port_item.hpp
